# querycases-QTWidget

./: CMakeLists.txt  README.md  casemessage.h  collector.h  configinfo.h  emitter.cpp  emitter.h  example.txt  iocontextmanager.h  log.h  logtextedit.cpp  logtextedit.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  parsehtml.h  prompttext.cpp  prompttext.h  querymessage.h  querythread.cpp  querythread.h  querytreewidget.cpp  querytreewidget.h  refinecases.h  resulttype.h  spendtime.h  worker.h
